# predicates

./: .gitignore  README.md  noxfile.py  pyproject.toml
src/predicates/: __init__.py
tests/: test_predicates.py
