[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "nox>=2022.11.21",
    "pre-commit>=2.21.0",
    "black>=23.3.0",
    "pytest>=7.3.1",
]

[project]
name = "predicates"
version = "0.0.1"
description = "(Yet another) predicate composition library"
authors = [
    {name = "sharpencrag / Ed whetstone", email = "ed.whetstone@gmail.com"},
]
dependencies = []
requires-python = ">=3.7"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
